--- a/src/templates/bounty.html
+++ b/src/templates/bounty.html
@@ -2,7 +2,7 @@
 
 <div style="float: left; margin-right: 20px;">
 
-<h2>Bounty: "{{ bounty.hash }}" for {{ bounty.bounty }} BTC</h2>
+<h2>Bounty [{{ bounty.type }}]: "{{ bounty.hash }}" for {{ bounty.bounty }} BTC</h2>
 
 <form method="post" action="">
   <dl>
