--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,10 +1,11 @@
-{%- import 'macros.html' as macros -%}
 <html>
 <head>
-  <title>{% block title %}{% endblock %} | HashBounty</title>  
+<title>HashBounty</title>
 </head>
-
 <body>
-{% block body %}{% endblock %}
+<div>
+{% block body %}
+{% endblock %}
+</div>
 </body>
 </html>
