sort and filter

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-<title>HashBounty</title>
+    <title>HashBounty</title>
+	<link rel="stylesheet" href="/static/style.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+    <script src="/static/sortfilter.js"></script>
 </head>
 <body>
 <div>
