--- a/src/templates/bounties.html
+++ b/src/templates/bounties.html
@@ -12,8 +12,10 @@
     {{ render_field(form.hash) }}
     {{ render_field(form.email) }}
     {{ render_field(form.bounty) }}
+    <dd>
+      <input type="submit" value="Add bounty">
+    </dd>
   </dl>
-  <p><input type="submit" value="Add bounty">
 </form>
 
 Please note,
