--- a/src/templates/bounty.html
+++ b/src/templates/bounty.html
@@ -1,5 +1,8 @@
+{% extends 'base.html' %}
+
 {% from "_formhelpers.html" import render_field %}
 
+{% block body %}
 <div style="float: left; margin-right: 20px;">
 
 <h2>Bounty [{{ bounty.type }}]: "{{ bounty.hash }}" for {{ bounty.bounty }} BTC</h2>
@@ -8,9 +11,11 @@
   <dl>
     {{ render_field(form.text) }}
     {{ render_field(form.address) }}
+    <dd>
+      <input type="submit" value="Submit solution">
+    </dd>
   </dl>
-  <p><input type="submit" value="Submit solution">
 </form>
 
 </div>
-
+{% endblock %}
