--- a/src/templates/email_messages.html
+++ b/src/templates/email_messages.html
@@ -24,11 +24,11 @@ Bounty solved!
 
 {% macro bitcoins_received(bounty, amount=0) -%}
 Your hash '{{ bounty.hash }}' has received {{ amount }} BTC. The total bounty is {{ bounty.bounty }} BTC.
-{%- if not bounty.active -%}
-  You still need to send {{ bounty.bounty - bounty.budget }} BTC.
-{%- else -%}
-  Thank you.
-{%- endif -%}
+{% if not bounty.active %}
+You still need to send {{ bounty.bounty - bounty.budget }} BTC.
+{% else %}
+Thank you.
+{% endif %}
 {%- endmacro  %}
 
 {% macro bitcoins_received_subject(bounty, amount=0) -%}
